<resources>
    <string name="app_name">Complete Course</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="rupees">₹</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="privacy_warning">By registering you agree to</string>
    <string name="user_registration">User registration terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home">Home</string>
    <string name="company_image">ग्रिड छवि</string>
    <string name="text_chemistry">रसायन विज्ञान</string>
    <string name="text_mathematics">गणित</string>
    <string name="text_biology">जीवविज्ञान</string>
    <string name="text_science">विज्ञान</string>
    <string name="text_physics">भौतिक विज्ञान</string>
    <string name="vidya_motto">सीखना, सेवा करना, नेतृत्व करना</string>
    <string name="chapter_name">अध्याय का नाम</string>
    <string name="please_enter_the_one_time_password">Please Enter the One Time Password</string>
    <string name="please_update_the_app_to_continue">Please update the app to continue</string>
    <string name="update_now">Update Now</string>
    <string name="email">Email: %1$s</string>
    <string name="username">Name: %1$s</string>
    <string name="user_class">Class: %1$s</string>
    <string name="school">School: %1$s</string>
    <string name="contact">Contact: %1$s</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>


    <string name="ad_colony_app_id">app1799e20f2fa449f49e</string>
    <string name="ad_colony_interstitial_ad_zone">vz651a7e3a9c5f4c7d80</string>
    <string name="ad_colony_banner">vzb749fd2c306848359e</string>

    <string name="unity_game_id">3798079</string>
    <string name="unity_interstitial_placement_id">CCInterstitial</string>
    <string name="unity_banner">CCBanner</string>

    <string name="admob_app_id">ca-app-pub-4214231949040116~5453561917</string>
    <string name="interstitial_ad_id">ca-app-pub-4214231949040116/9935239151</string>
    <string name="banner_ad_unit">ca-app-pub-4214231949040116/9497999732</string>
    <string name="native_ad">ca-app-pub-4214231949040116/7834426321</string>

    <!--
    <string name="banner_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_advanced_test">ca-app-pub-3940256099942544/2247696110</string>
    -->


    <string name="know_more">Know more..</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="mathematics">Mathematics</string>
    <string name="profile">Profile</string>
    <string name="for_complete_success">For Complete Success</string>
    <string name="cc_logo">Complete course Banner</string>
    <string name="arrow">arrow</string>
    <string name="text_science_english">Science</string>
    <string name="boy">boy</string>
    <string name="background_image">background_image</string>
    <string name="up">up_icon</string>
    <string name="competition_updates">Competition Updates</string>
    <string name="previous">previous</string>
    <string name="banner">banner</string>
    <string name="important_concepts">important_concepts</string>
    <string name="answer_key">Answer Key</string>
    <string name="other_important_ques">Other Important Questions</string>
    <string name="videos">videos</string>
    <string name="empty_icon">Empty Icon</string>
    <string name="no_notifications">No notifications</string>
    <string name="thumbnail">thumbnail</string>
    <string name="slider_image">slider_image</string>
    <string name="subject_image">subject image</string>
    <string name="ncert_answer_key">NCERT Answer Key</string>
    <string name="important_questions">Important Questions</string>
    <string name="welcome_text_1">Easily search our books either manually or by scanning the QR code and get easy access to chapters.</string>
    <string name="know_the_answer">Know the Answer</string>
    <string name="welcome_text2">Finding the answers is crucial to success. Get all your questions from the chapters answered Once you have finished the chapter.</string>
    <string name="welcome_text3">Understand and study what\'s important For better exam preparation. Find all important concepts after clicking on the chapter name of the book.</string>
    <string name="welcome_text4">Our Super smart app will help you stay ahead with our regular completion updates according to your class and stream.</string>
    <string name="notifications">Notifications</string>
    <string name="free">Free</string>
    <string name="install">Install</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="not_provided">Not Provided</string>
    <!--
    <string name="default_web_client_id">225728743365-mbgvbth7rglufp23a2ttqb111h6k2aeo.apps.googleusercontent.com</string>
    -->
</resources>
