<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <ImageView
        android:contentDescription="@string/cc_logo"
        android:id="@+id/logo_splash"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cc_logo" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/cc_text_img_splash"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_splash"
        android:layout_marginStart="24dp"
        android:src="@drawable/complete_course"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_text_img_splash"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/for_complete_success"
        android:fontFamily="@font/carpenters_font"
        android:textColor="#ffffff"
        android:textSize="16sp"/>



    <ImageView
        android:contentDescription="@string/boy"
        android:layout_width="270dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/splash_boy"/>


    <ImageView
        android:contentDescription="@string/vidya_motto"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/vpml_backdrop" />



</RelativeLayout>