<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:contentDescription="@string/background_image"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/know_image"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>


    <ImageView
        android:contentDescription="@string/cc_logo"
        android:id="@+id/cc_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/cc_logo"
        android:text="@string/for_complete_success"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/carpenters_personal_use"
        android:textColor="@color/colorPrimary"
        />
    
    
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:text="@string/know_the_answer"
        android:textColor="#3C31A7"
        android:textSize="30sp"
        android:fontFamily="@font/asphalt_brush_font"
        android:layout_marginTop="12dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/text"
        android:background="@drawable/background_gradient3"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text2"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginEnd="16dp"/>


    </RelativeLayout>


</RelativeLayout>
