<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6">

    <ImageView
        android:contentDescription="@string/background_image"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/competition_updates_intro"
        android:layout_marginTop="50dp"/>


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:text="@string/competition_updates"
        android:textColor="#3C31A7"
        android:textSize="30sp"
        android:fontFamily="@font/asphalt_brush_font"
        android:layout_marginTop="16dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/text"
        android:background="@drawable/background_gradient4"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text4"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>
</RelativeLayout>