<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:contentDescription="@string/banner"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/app_banner" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/please_update_the_app_to_continue"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/update_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_gradient"
            android:textColor="#ffffff"
            android:layout_gravity="bottom"
            android:text="@string/update_now"/>

    </LinearLayout>

</RelativeLayout>