<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBar"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/margin_5">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:paddingBottom="@dimen/margin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="enterAlwaysCollapsed"
        app:titleEnabled="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="none"
            app:layout_collapseParallaxMultiplier="0.1">
            <ImageView
                android:contentDescription="@string/background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_book_toolbar"/>

            <RelativeLayout
                android:id="@+id/relToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="top"
                android:paddingStart="@dimen/margin_12"
                android:paddingEnd="@dimen/margin_12"
                android:paddingTop="@dimen/margin_10">

                <ImageView
                    android:contentDescription="@string/up"
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/margin_6"
                    android:src="@drawable/ic_arrow_left_black" />

                <ImageView
                    android:contentDescription="@string/competition_updates"
                    android:id="@+id/ic_competition_updates"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_trophy"
                    android:visibility="visible" />

            </RelativeLayout>
        <RelativeLayout
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_140"
            android:layout_marginBottom="@dimen/margin_30"
            android:layout_below="@+id/relToolbar">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpagerr"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_centerHorizontal="true"/>
            <LinearLayout
                android:id="@+id/previceItmLy"
                android:background="@color/white_transparent"
                android:paddingEnd="@dimen/margin_55"
                android:paddingStart="0dp"
                android:paddingBottom="@dimen/margin_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true">
                <ImageView
                    android:contentDescription="@string/previous"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_17"
                    android:src="@drawable/previces_icon"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:id="@+id/nextItmLy"
                android:background="@color/white_transparent"
                android:paddingStart="@dimen/margin_55"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/margin_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">
                <ImageView
                    android:contentDescription="@string/next"
                    android:padding="@dimen/margin_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_17"
                    android:src="@drawable/next_icon"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
    <com.google.android.material.tabs.TabLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        style="@style/AppTabLayout"/>
    <View
        android:background="@drawable/ic_top_bottom_shadow"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_12"/>
        </com.google.android.material.appbar.AppBarLayout>

    <View
        android:background="@drawable/shadow_top_to_bottom"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"
        android:layout_centerVertical="true"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="bottom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <FrameLayout
        android:id="@+id/frame_container"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
